# raydex-analytics

./: .gitignore  Cargo.toml  Makefile
infra/: docker-compose.yml
services/ingestion/: Cargo.toml
services/ingestion/src/: config.rs  kafka.rs  main.rs  models.rs
